Добавлен проект Visual Studio 2012 для парсера.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /Debug
 /Release
+/AutoDokParser/VSproject/Release
+/AutoDokParser/VSproject/Debug
+/AutoDokParser/VSproject/VSproject/Release
+/AutoDokParser/VSproject/VSproject/Debug
