1) Добавил в файл "архитектуры" описание нескольких страниц, которые будут генерироваться парсером. 2) Начал описывать класс DescriptionPage, который будет представлять собой общий шаблон для страниц описания.

--- a/AutoDokParser/VSproject/VSproject/VSproject.vcxproj
+++ b/AutoDokParser/VSproject/VSproject/VSproject.vcxproj
@@ -11,7 +11,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\src\DescriptionPage.cpp" />
     <ClCompile Include="..\..\src\main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\src\DescriptionPage.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{C15E466F-F396-4CE1-B84E-C652BCE3CAF9}</ProjectGuid>
