--- a/AutoDokParser/VSproject/VSproject/VSproject.vcxproj.filters
+++ b/AutoDokParser/VSproject/VSproject/VSproject.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="..\..\src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\DescriptionPage.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\src\DescriptionPage.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
