--- a/AutoDokParser/VSproject/VSproject/VSproject.vcxproj.filters
+++ b/AutoDokParser/VSproject/VSproject/VSproject.vcxproj.filters
@@ -21,9 +21,27 @@
     <ClCompile Include="..\..\src\DescriptionPage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\ClassDescriptionPage.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\FuncDescriptionPage.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\PageFactory.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\DescriptionPage.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\ClassDescriptionPage.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\FuncDescriptionPage.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\PageFactory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
