Добавлен заголовок stdafx.h со всеми стандартными библиотеками. Добавлены кострукторы и деструкторы некоторым файлам и решены неправильные зависимости. Настроен проект на папку с сорсами, чтобы не писать абсолютный или относительный путь вручную.

--- a/AutoDokParser/CBproject/AutoDokParser.cbp
+++ b/AutoDokParser/CBproject/AutoDokParser.cbp
@@ -41,6 +41,7 @@
 		<Unit filename="../src/PageFactory.cpp" />
 		<Unit filename="../src/PageFactory.h" />
 		<Unit filename="../src/main.cpp" />
+		<Unit filename="../src/stdafx.h" />
 		<Extensions>
 			<DoxyBlocks>
 				<comment_style block="0" line="0" />
